# openDM

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.github/: FUNDING.yml
src/: App.css  App.jsx  icons.js  main.jsx  styles.css
src-tauri/: .gitignore  Cargo.toml  config.json  file_info.db  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  errors.rs  main.rs  os.rs
src-tauri/src/config/: mod.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/download_manager/: metadata_retriever.rs  mod.rs
src/common/constants/: index.js
src/components/AllDM/: AllDM.jsx
src/components/DownloadList/: DownloadList.jsx
src/components/DownloadList/MultipartProgressBar/: MultipartProgressBar.jsx
src/components/Home/: Home.jsx
src/components/MainPanel/: MainPanel.jsx
src/components/SidePanel/: SidePanel.jsx
src/components/SidePanel/Schedules/: Schedules.jsx
src/components/SidePanel/Tags/: Tags.jsx
src/components/SidePanel/Tasks/: Tasks.jsx
src/components/ToggleButton/: ToggleButton.jsx
src/components/URLManager/: URLManager.jsx  docs.js
src/components/WindowControls/: WindowControls.css  WindowControls.jsx
src/contexts/: SelectedItemContext.jsx
