[package]
name = "xdm"
version = "0.0.0"
description = "Hope for the free loaders"
authors = ["Subam Subhasis Patra"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "window-set-fullscreen",
    "macos-private-api",
    "window-close",
    "window-set-maximizable",
    "window-unmaximize",
    "window-unminimize",
    "window-set-max-size",
    "window-minimize",
    "window-maximize",
    "window-start-dragging",
    "window-set-closable",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.9"
os_info = "3.2"
reqwest = "0.12.4"
tokio = "1.37.0"
anyhow = "1.0.84"

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
